feat(monitor): 盘中监控性能优化与功能增强
- 新增K线拉取并行化，使用4线程线程池提高扫描效率
- 替换WebSocket为10秒高频轮询，提升实时性
- 集成SSE推送实现实时价格更新，自动刷新表格数据
- 新增6个A股适配策略，包括红利低波、涨停板等关键策略
- 实现新闻事件解析和超预期信号计算，增强事件驱动策略
- 添加自定义股票功能，支持手动添加监控目标并持久化存储
- 优化盘中监控UI界面，新增涨跌幅列和信号状态展示
- 扩展数据更新模块，新增一致预期和业绩快报数据采集
- 修复多项历史遗留问题，包括类型转换、实时价获取等bug